--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ body {
     font-weight: 500;
 }
 
-.ourStory h1, .contacthead {
+.ourStory h1, .contacthead, .producehead {
     font-weight: 600;
 }
 
@@ -126,7 +126,7 @@ body {
     color: #C4302B;
     cursor: pointer;
 }
-.contactsub {
+.contactsub, .producesub {
     font-size: 1.2em;
     font-weight: normal;
     letter-spacing: 0.115em;
@@ -147,5 +147,20 @@ body {
     }
 }
 
+.produceCard {
+    margin: 15px auto;
+    width: 20rem;
+    height: 25rem;
+    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.336);
+}
+
+.seasonhead{
+    
+    font-weight: 700;
+}
+.seasonsub {
+    font-size: 2rem;
+    color: #c4c4c4;
+}
 
 
