--- a/css/main.scss
+++ b/css/main.scss
@@ -48,10 +48,11 @@ header {
 
 #home {
     .jumbotron {
-        background: linear-gradient(
+        background: url("assets/images/bg.jpg") fixed center center,
+                    linear-gradient(
             rgba(0, 0, 0, 0.5), 
             rgba(0, 0, 0, 0.5)
-          ),url("assets/images/bg.jpg") fixed center center;
+          );
         background-size: cover;
         padding-top: 9%;
         padding-bottom: 9%;
