--- a/css/main.scss
+++ b/css/main.scss
@@ -48,7 +48,7 @@ header {
 
 #home {
     .jumbotron {
-        background: url("assets/images/bg.jpg") fixed center center,
+        background: url("assets/images/bg.JPG") fixed center center,
                     linear-gradient(
             rgba(0, 0, 0, 0.5), 
             rgba(0, 0, 0, 0.5)
