--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ header .loginbtn {
     color: white; }
 
 #home .jumbotron {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/assets/images/bg.jpg") fixed center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/assets/images/bg.JPG") fixed center center;
   background-size: cover;
   padding-top: 9%;
   padding-bottom: 9%; }
