--- a/css/main.scss
+++ b/css/main.scss
@@ -48,11 +48,10 @@ header {
 
 #home {
     .jumbotron {
-        background: url("assets/images/bg.JPG") fixed center center,
-                    linear-gradient(
+        background: linear-gradient(
             rgba(0, 0, 0, 0.5), 
             rgba(0, 0, 0, 0.5)
-          );
+          ),url("/assets/images/bg.JPG") fixed center center;
         background-size: cover;
         padding-top: 9%;
         padding-bottom: 9%;
