--- a/css/main.scss
+++ b/css/main.scss
@@ -51,7 +51,7 @@ header {
         background: linear-gradient(
             rgba(0, 0, 0, 0.5), 
             rgba(0, 0, 0, 0.5)
-          ),url("/assets/images/bg.JPG") fixed center center;
+          ),url(/assets/images/bg.JPG) fixed center center;
         background-size: cover;
         padding-top: 9%;
         padding-bottom: 9%;
